<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d20_background"
    android:fitsSystemWindows="true"
    tools:context="com.example.daniel.rollwithit.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <Button
            android:id="@+id/create_character_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:onClick="startCharacterCreationActivity"
            android:text="@string/create_character"
             />

        <Button
            android:id="@+id/load_character_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:onClick="raiseCharacterSelectionDialog"
            android:text="@string/load_character"
             />

        <Button
            android:id="@+id/roll_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:onClick="startDiceRollerActivity"
            android:text="@string/dice_roller_button"
            />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>