...
            android:layout_weight="1.25"
            android:gravity="center"
            android:hint="@string/initiative"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/armour_class_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.25"
            android:gravity="center"
            android:hint="@string/armourClassShort"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/level_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.25"
            android:gravity="center"
            android:hint="@string/level"
            android:textIsSelectable="false" />
...
