...
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/alignment"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/xp_value"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:hint="@string/xp"
            android:textIsSelectable="false" />
...
